--- a/Front/src/app/Pages/Usuario/cadastrar-usuario/cadastrar-usuario.component.html
+++ b/Front/src/app/Pages/Usuario/cadastrar-usuario/cadastrar-usuario.component.html
@@ -1,1 +1,19 @@
-<p>cadastrar-usuario works!</p>
+<form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Nome</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="nome" name="nome">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">User Name</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="userName" name="userName">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Email</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="email" name="email">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Senha</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="senha" name="senha">
+  </div>
+  <button type="submit" class="btn btn-primary" (click)="cadastrar()">Submit</button>
+</form>
