--- a/Front/src/app/Pages/Usuario/editar-usuario/editar-usuario.component.html
+++ b/Front/src/app/Pages/Usuario/editar-usuario/editar-usuario.component.html
@@ -1,1 +1,11 @@
-<p>editar-usuario works!</p>
+<form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Nome</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="nome" name="nome">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">User Name</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="userName" name="userName">
+  </div>
+  <button type="submit" class="btn btn-primary" (click)="editar()">Submit</button>
+</form>
