--- a/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.html
+++ b/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.html
@@ -1,7 +1,9 @@
 <div id="caixa">
     <div id="divEsquerda">
-        <p>{{usuario.nome}}</p>
-        <p>{{usuario.userName}}</p>
+        <div id="userInfo">
+            <p>{{usuario?.nome}}</p>
+            <p>{{usuario?.userName}}</p>
+        </div>
     </div>
     <div id="divCentro">
         <div id="searchBar">
@@ -12,6 +14,6 @@
         </div>
     </div>
     <div id="divDireita">
-        <h1>direita</h1>
+        <button (click)="irParaCadastrar()">Nova Publicação</button>
     </div>
 </div>
