--- a/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.scss
+++ b/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.scss
@@ -1,4 +1,6 @@
 #caixa{
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -8,4 +10,46 @@
     width: 300px;
     height: 20px;
     border: 1px solid black;
+    align-self: center;
+}
+
+#divEsquerda, #divCentro, #divDireita{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+#divEsquerda{
+    align-items: center;
+}
+
+#userInfo{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-top: 30px;
+}
+
+#divEsquerda>#userInfo>p{
+    margin: 0px;
+}
+
+#divDireita{
+    align-items: center;
+    justify-content: center;
+}
+
+button{
+    width: 300px;
+    height: 30px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+button:hover{
+    width: 350px;
+    height: 50px;
+    border-radius: 30px;
+    font-size: 20px;
+    background-color: rgba(60, 255, 0, 0.5);
 }
