--- a/Front/src/app/Pages/Postagem/cadastrar-postagem/cadastrar-postagem.component.html
+++ b/Front/src/app/Pages/Postagem/cadastrar-postagem/cadastrar-postagem.component.html
@@ -1,15 +1,14 @@
 <form>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Titulo</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="titulo" name="titulo">
+  <div id="caixa">
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Titulo</label>
+      <input type="text" class="form-control" id="inputTitulo" aria-describedby="emailHelp" [(ngModel)]="titulo" name="titulo" autocomplete="off">
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Conteudo</label>
+      <br>
+      <textarea id="inputConteudo" name="conteudo" [(ngModel)]="conteudo"></textarea>
+    </div>
+    <button type="submit" class="btn btn-outline-success" (click)="cadastrar()">Postar</button>
   </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Conteudo</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="conteudo" name="conteudo">
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">UsuarioId</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="UsuarioId" name="UsuarioId">
-  </div>
-  <button type="submit" class="btn btn-primary" (click)="cadastrar()">Submit</button>
-</form>
+</form> 
