Front: perfilPage - estruturado e funcionando, listarPostagem - implementado excluir postagem e icones AngularMaterial, editarPostagem - UI nova

--- a/Front/src/app/Pages/Postagem/listar-postagem/listar-postagem.component.html
+++ b/Front/src/app/Pages/Postagem/listar-postagem/listar-postagem.component.html
@@ -1,16 +1,25 @@
-<div *ngFor="let p of postagens">
+<div *ngFor="let p of postagens" id="postagem">
   <!-- topo com o userName do usuario logado -->
   <div id="userName">
     <p>@{{usuario?.userName}}</p>
   </div>
   <!-- seção de conteudo -->
-  <div id="boxConteudo">    
+  <div id="boxConteudo">     
       <div id="titulo">
         <p>{{p.titulo}}</p>
       </div>
     
       <div id="conteudo">
         <p>{{p.conteudo}}</p>
+      </div>
+
+      <div id="btns">
+        <button id="btnEditar" mat-icon-button color="primary" (click)="Editar(p.id)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button id="btnExcluir" mat-icon-button color="warn" (click)="Excluir(p.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
       </div>
   </div>
   <hr>
