--- a/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.html
+++ b/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.html
@@ -2,7 +2,7 @@
     <div id="divEsquerda">
         <div id="userInfo">
             <p>{{usuario?.nome}}</p>
-            <p>{{usuario?.userName}}</p>
+            <p>@{{usuario?.userName}}</p>
         </div>
     </div>
     <div id="divCentro">
