--- a/Front/src/app/Pages/Postagem/editar-postagem/editar-postagem.component.html
+++ b/Front/src/app/Pages/Postagem/editar-postagem/editar-postagem.component.html
@@ -1,11 +1,14 @@
 <form>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Titulo</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="titulo" name="titulo">
+  <div id="caixa">
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Titulo</label>
+      <input type="text" class="form-control" id="inputTitulo" aria-describedby="emailHelp" [(ngModel)]="titulo" name="titulo">
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Conteudo</label>
+      <br>
+      <textarea id="inputConteudo" name="conteudo" [(ngModel)]="conteudo"></textarea>
+    </div>
+    <button type="submit" class="btn btn-outline-success" (click)="Editar()">Concluir</button>
   </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Conteudo</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="conteudo" name="conteudo">
-  </div>
-  <button type="submit" class="btn btn-primary" (click)="Editar()">Submit</button>
 </form>
