--- a/Front/src/app/Pages/Postagem/listar-postagem/listar-postagem.component.scss
+++ b/Front/src/app/Pages/Postagem/listar-postagem/listar-postagem.component.scss
@@ -6,6 +6,12 @@
     margin: 0px;
 }
 
+#boxConteudo{
+    display: flex;
+    flex-direction: column;
+
+}
+
 #titulo{
     font-family: 'Bebas Neue', sans-serif;
     font-size: large;
@@ -14,4 +20,26 @@
 
 #conteudo{
     font-family: 'Open Sans', sans-serif;
+}
+
+#btns{
+    align-self:flex-end;
+}
+
+#btnEditar{
+    border: none;
+    background-color: rgba(240, 248, 255, 0);
+}
+
+#btnEditar:hover{
+    color: green;
+}
+
+#btnExcluir{
+    border: none;
+    background-color: rgba(240, 248, 255, 0);
+}
+
+#btnExcluir:hover{
+    color: red;
 }
