Front: LoginComponent - logica de login refinada e funcional, apenas faz login quando os dados do usuario estão salvos

--- a/Front/src/app/Pages/Postagem/listar-postagem-seguidos/listar-postagem-seguidos.component.html
+++ b/Front/src/app/Pages/Postagem/listar-postagem-seguidos/listar-postagem-seguidos.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let p of postagens" id="postagem">
   <!-- topo com o userName do usuario logado -->
   <div id="userName">
-    <p>@{{usuario?.userName}}</p>
+    <p>@{{p.usuarioId}}</p>
   </div>
   <!-- seção de conteudo -->
   <div id="boxConteudo">     
