--- a/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.html
+++ b/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.html
@@ -1,6 +1,7 @@
 <div id="caixa">
     <div id="userInfo">
-        <h1>Olá <strong>{{usuario?.nome}}</strong> seja bem vindo(a) a sua página de perfil :]</h1>
+        <h1>Olá <strong>{{usuario?.nome}}</strong> seja bem vindo(a) a página do ser perfil :]</h1>
+        <br>
         <p>{{usuario?.nome}}</p>
         <p>@{{usuario?.userName}}</p>
     </div>
