--- a/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.scss
+++ b/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.scss
@@ -39,17 +39,26 @@
     justify-content: center;
 }
 
-button{
+#novaPubli{
     width: 300px;
     height: 30px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0);
 }
 
-button:hover{
+#novaPubli:hover{
     width: 350px;
     height: 50px;
     border-radius: 30px;
     font-size: 20px;
     background-color: rgba(60, 255, 0, 0.5);
+}
+
+.texto-clicavel {
+  background: none;     
+  border: none;           
+  padding: 0;            
+  margin: 0;       
+  cursor: pointer;        
+  font: inherit;          
 }
