--- a/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.scss
+++ b/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.scss
@@ -11,6 +11,7 @@
 }
 
 #userInfo>h1{
+    margin: 15px;
     font-size: 25px;
     font-weight: 400;
     font-family: 'Open Sans', sans-serif;
@@ -29,6 +30,7 @@
     width: 50%;
 }
 #postagens>app-listar-postagem{
+    margin-bottom: 20px;
     padding: 10px;
     border: 1px solid black;
     border-radius: 20px;
