--- a/Front/src/app/Pages/Usuario/login/login.component.html
+++ b/Front/src/app/Pages/Usuario/login/login.component.html
@@ -7,5 +7,8 @@
     <label for="exampleInputEmail1" class="form-label">Senha</label>
     <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="senha" name="senha">
   </div>
-  <button type="submit" class="btn btn-primary" (click)="login()">login</button>
+  <button type="submit" class="btn btn-primary" (click)="login()" [disabled]="isLoading">
+    {{ isLoading ? "Entando..." : "Entrar" }}
+  </button>
+  <div *ngIf="isLoading" class="spinner"></div>
 </form>
