--- a/Front/src/app/Pages/Usuario/login/login.component.html
+++ b/Front/src/app/Pages/Usuario/login/login.component.html
@@ -1,14 +1,16 @@
 <form>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Email</label>
-    <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="email" name="email">
+  <div id="boxLogin">
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Email</label>
+      <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="email" name="email">
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Senha</label>
+      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="senha" name="senha">
+    </div>
+    <button type="submit" class="btn btn-outline-success" (click)="login()" [disabled]="isLoading">
+      {{ isLoading ? "Entando..." : "Entrar" }}
+    </button>
   </div>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Senha</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="senha" name="senha">
-  </div>
-  <button type="submit" class="btn btn-primary" (click)="login()" [disabled]="isLoading">
-    {{ isLoading ? "Entando..." : "Entrar" }}
-  </button>
   <div *ngIf="isLoading" class="spinner"></div>
 </form>
