Front: cadastrarUsuarioComponent - formulario estilizado

--- a/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.html
+++ b/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.html
@@ -13,6 +13,7 @@
         </div>
         <div>
             <app-listar-postagem-seguidos></app-listar-postagem-seguidos>
+            <app-listar-postagem></app-listar-postagem>
         </div>
     </div>
     <div id="divDireita">
