--- a/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.scss
+++ b/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.scss
@@ -20,7 +20,12 @@
 }
 
 #divEsquerda{
+    position: sticky;
     align-items: center;
+}
+
+#divCentro{
+    overflow-y: auto;
 }
 
 #userInfo{
@@ -35,23 +40,22 @@
 }
 
 #divDireita{
+    position: sticky;
     align-items: center;
-    justify-content: center;
 }
 
 #novaPubli{
     width: 300px;
     height: 30px;
+    margin-top: 30px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0);
+    transition: border 0.3s ease, transform 0.3s ease;
 }
 
 #novaPubli:hover{
-    width: 350px;
-    height: 50px;
-    border-radius: 30px;
-    font-size: 20px;
-    background-color: rgba(60, 255, 0, 0.5);
+    border: rgb(0, 216, 0) 3px solid;
+    transform: scale(1.3);
 }
 
 .texto-clicavel {
