--- a/Front/src/app/Pages/Usuario/login/login.component.scss
+++ b/Front/src/app/Pages/Usuario/login/login.component.scss
@@ -1,3 +1,12 @@
+#caixa{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+
 .spinner {
   border: 4px solid #f3f3f3;
   border-top: 4px solid #3498db;
@@ -13,15 +22,33 @@
   100% { transform: rotate(360deg); }
 }
 
-#boxLogin{
-    display: flex;
-    justify-self: center;
-    align-self: center;
-    flex-direction: column;
-    margin-top: 100px;
-    padding: 20px;
-    height: 100%;
-    width: 300px;
-    border: 1px solid #ced4da;
-    border-radius: 0.375rem;
+#boxLogin{ 
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  padding: 20px;
+  height: 100%;
+  width: 300px;
+  border: 1px solid #ced4da;
+  border-radius: 0.375rem;
+}
+
+#btnEntrar{
+  align-self: center;
+  width: 100%;
+}
+
+#textoClicavel{
+  color: #3498db;
+  background-color: transparent;
+  border: none;
+  margin: 10px;
+  padding: 0px;
+  cursor: pointer;
+  transition: color 0.5s ease, text-decoration 0.3s ease;
+}
+
+#textoClicavel:hover{
+  text-decoration: underline;
+  color: darkblue;
 }
