--- a/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.scss
+++ b/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.scss
@@ -17,7 +17,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-#userInfo>p{
+#caixaUser>p{
     margin-bottom: 5px;
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
@@ -34,9 +34,20 @@
     padding: 10px;
     border: 1px solid black;
     border-radius: 20px;
+    border-top-left-radius: 0px;
 }
 
-#postagens>h1{
-    font-size: 25px;
-    font-weight: 400;
+#iconeGrade{
+    margin: 7px;
+    transform: scale(1.4);
+}
+
+#divIcone{
+    padding: 5px;
+    border: 1px black solid;
+    border-bottom: 0px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: max-content;
+    height: max-content;
 }
