--- a/Front/src/app/Pages/Usuario/login/login.component.html
+++ b/Front/src/app/Pages/Usuario/login/login.component.html
@@ -1,15 +1,24 @@
-<form>
+<form (ngSubmit)="login()">
   <div id="caixa">
     <div id="boxLogin">
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Email</label>
-        <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="email" name="email">
+        <input type="text" class="form-control" id="exampleInputPassword1" [(ngModel)]="email" name="email" autocomplete="off">
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Senha</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="senha" name="senha">
+        <div id="boxSenha">
+          <input id="senha" [type]="senhaVisivel ? 'text' : 'password'" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="senha" name="senha" autocomplete="off">
+
+          <button type="button" id="toggleSenha" (click)="toggleSenha()">
+            <span class="material-icons">
+              <mat-icon>{{ senhaVisivel ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </span>
+          </button>
+
+        </div>
       </div>
-      <button id="btnEntrar" type="submit" class="btn btn-outline-success" (click)="login()" [disabled]="isLoading">
+      <button id="btnEntrar" type="submit" class="btn btn-outline-success" [disabled]="isLoading">
         {{ isLoading ? "Entando..." : "Entrar" }}
       </button>
     </div>
