--- a/Front/src/app/Pages/Usuario/login/login.component.scss
+++ b/Front/src/app/Pages/Usuario/login/login.component.scss
@@ -52,3 +52,12 @@
   text-decoration: underline;
   color: darkblue;
 }
+
+#boxSenha{
+    display: flex;
+}
+
+#toggleSenha{
+    border: none;
+    background-color: transparent;
+}
