--- a/Front/src/app/Pages/Postagem/cadastrar-postagem/cadastrar-postagem.component.html
+++ b/Front/src/app/Pages/Postagem/cadastrar-postagem/cadastrar-postagem.component.html
@@ -1,4 +1,4 @@
-<form>
+<form (ngSubmit)="cadastrar()">
   <div id="caixa">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Titulo</label>
@@ -9,6 +9,6 @@
       <br>
       <textarea id="inputConteudo" name="conteudo" [(ngModel)]="conteudo"></textarea>
     </div>
-    <button type="submit" class="btn btn-outline-success" (click)="cadastrar()">Postar</button>
+    <button type="submit" class="btn btn-outline-success">Postar</button>
   </div>
 </form> 
