--- a/Front/src/app/Pages/Postagem/listar-postagem-seguidos/listar-postagem-seguidos.component.html
+++ b/Front/src/app/Pages/Postagem/listar-postagem-seguidos/listar-postagem-seguidos.component.html
@@ -1,7 +1,9 @@
 <div *ngFor="let p of postagens" id="postagem">
   <!-- topo com o userName do usuario logado -->
   <div id="userName">
-    <p>@{{p.usuarioId}}</p>
+    <button class="texto-clicavel">
+        @{{p.usuarioId}}
+    </button>
   </div>
   <!-- seção de conteudo -->
   <div id="boxConteudo">     
