--- a/Front/src/app/Pages/Postagem/listar-postagem-seguidos/listar-postagem-seguidos.component.scss
+++ b/Front/src/app/Pages/Postagem/listar-postagem-seguidos/listar-postagem-seguidos.component.scss
@@ -43,3 +43,12 @@
 #btnExcluir:hover{
     color: red;
 }
+
+.texto-clicavel {
+  background: none;     
+  border: none;           
+  padding: 0;            
+  margin: 0;       
+  cursor: pointer;        
+  font: inherit;          
+}
