--- a/Front/src/app/Pages/UI/Perfil/perfil-usuarios/perfil-usuarios.component.scss
+++ b/Front/src/app/Pages/UI/Perfil/perfil-usuarios/perfil-usuarios.component.scss
@@ -1,3 +1,4 @@
+// codigo CSS das informações do usuario
 #caixa{
     display: flex;
     flex-direction: column;
@@ -29,7 +30,8 @@
     flex-direction: column;
     width: 50%;
 }
-#postagens>app-listar-postagem{
+
+#postComponente{
     margin-bottom: 20px;
     padding: 10px;
     border: 1px solid black;
@@ -50,4 +52,56 @@
     border-top-right-radius: 10px;
     width: max-content;
     height: max-content;
+}
+
+// codigo CSS da lista de postagens
+#userName{
+    padding-top: 10px;
+}
+
+#userName>p{
+    margin: 0px;
+}
+
+#boxConteudo{
+    display: flex;
+    flex-direction: column;
+
+}
+
+#titulo{
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: large;
+    letter-spacing: 1px;
+}
+
+#conteudo{
+    font-family: 'Open Sans', sans-serif;
+}
+
+#btns{
+    align-self:flex-end;
+}
+
+#btnEditar{
+    border: none;
+    background-color: rgba(240, 248, 255, 0);
+}
+
+#btnEditar:hover{
+    color: green;
+}
+
+#btnExcluir{
+    border: none;
+    background-color: rgba(240, 248, 255, 0);
+}
+
+#btnExcluir:hover{
+    color: red;
+}
+
+#boxFunction{
+    display: flex;
+    justify-content: space-between;
 }
