--- a/Front/src/app/Pages/Seguidores/listar-seguindo/listar-seguindo.component.html
+++ b/Front/src/app/Pages/Seguidores/listar-seguindo/listar-seguindo.component.html
@@ -1,6 +1,6 @@
 <div id="caixa">
-  <h1>Seguidores</h1>
-  <div id="infoSeguidos" *ngFor="let s of seguidores">
+  <h1>Seguindo</h1>
+  <div id="infoSeguidos" *ngFor="let s of seguidos">
     <p id="nome">{{s.nome}}</p>
     <button class="texto-clicavel"> 
         <p id="userName">@{{s.userName}}</p>
