--- a/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.scss
+++ b/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.scss
@@ -51,3 +51,24 @@
     width: max-content;
     height: max-content;
 }
+
+#userSeguidores{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 10px;
+    margin-bottom: 0px;
+}
+
+.texto-clicavel {
+    background: none;     
+    border: none;           
+    padding: 0;            
+    margin: 0px 15px 0px 15px;       
+    cursor: pointer;       
+    transition: color 0.5s ease, text-decoration 0.3s ease;          
+}
+
+.texto-clicavel:hover{
+    text-decoration: underline;
+    color: darkblue;
+}
