--- a/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.html
+++ b/Front/src/app/Pages/UI/Perfil/perfil-page/perfil-page.component.html
@@ -1,6 +1,6 @@
 <div id="caixa">
     <div id="userInfo">
-        <h1>Olá <strong>{{usuario?.nome}}</strong> seja bem vindo(a) a página do ser perfil :]</h1>
+        <h1>Olá <strong>{{usuario?.nome}}</strong> seja bem vindo(a) a página do seu perfil :]</h1>
         <br>
         <div id="caixaUser">
             <p>{{usuario?.nome}}</p>
@@ -10,7 +10,7 @@
         <!-- Lista de seguidores e seguidos -->
         <div id="userSeguidores">
             <button class="texto-clicavel" (click)="irParaListaSeguidores(id)"> 
-                <p>Seguidores</p>
+                <p>Seguidores</p> 
             </button>
             <button class="texto-clicavel" (click)="irParaListaSeguidos(id)">
                 <p>Seguindo</p>
