--- a/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.scss
+++ b/Front/src/app/Pages/UI/Feed/feed-page/feed-page.component.scss
@@ -9,8 +9,15 @@
 #searchBar{
     width: 300px;
     height: 20px;
-    border: 1px solid black;
     align-self: center;
+    margin-top: 30px;
+}
+
+#searchResult{
+    position: relative;
+    background-color: gainsboro;
+    border-end-end-radius: 20px;
+    padding: 10px;
 }
 
 #divEsquerda, #divCentro, #divDireita{
