Front - AuthService, modelo de dados incompativel com o modelo que estava sedo receido, modelo novo criado e correções necessarias realizadas, FeedComponent, userName nas postagem sendo imprimido da forma esperada

--- a/Front/src/app/Pages/Postagem/listar-postagem-seguidos/listar-postagem-seguidos.component.html
+++ b/Front/src/app/Pages/Postagem/listar-postagem-seguidos/listar-postagem-seguidos.component.html
@@ -2,7 +2,7 @@
   <!-- topo com o userName do usuario logado -->
   <div id="userName">
     <button class="texto-clicavel" (click)="irParaPerfil(p.usuarioId)">
-        @{{p.usuarioId}}
+        @{{getUserName(p.usuarioId)}}
     </button>
   </div>
   <!-- seção de conteudo -->
