--- a/Front/src/app/Pages/Usuario/cadastrar-usuario/cadastrar-usuario.component.html
+++ b/Front/src/app/Pages/Usuario/cadastrar-usuario/cadastrar-usuario.component.html
@@ -26,5 +26,8 @@
       </div>
     </div>
     <button type="submit" class="btn btn-outline-success">Cadastrar</button>
+    <div class="alerta" *ngIf="mostrarMsg">
+      <p id="msgAlerta">{{msg}}</p>
+    </div>
   </div>
-</form>
+</form> 
